--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>Etch a sketch</title>
 </head>
 <body>
+  <input type="color" id="colorpicker">
   <div class="sketch-area"></div>
 </body>
 </html>
