Added UI elements and styles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
   <title>Etch a sketch</title>
 </head>
 <body>
-  <input type="color" id="colorpicker">
+  <div class="control-panel">
+    <input type="color" id="colorpicker" />
+    <button class="pressed">Color Picker</button>
+    <button>Eraser</button>
+    <button>Black</button>
+    <button>Random</button>
+    <button>Reset</button>
+
+    <div>
+      <button>Change size</button>
+      <p id="range-value"></p>
+      <input type="range" min="4" max="100" value="64" id="canvas-size">
+    </div>
+  </div>
   <div class="sketch-area"></div>
 </body>
 </html>
